--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
 <h1>About BloccitSaur</h1>
 <p>Created by: <%= my_name %></p>
+
+<%= link_to "Checkout my GitHub", "https://github.com/CecilySaurus", class: "social-btn" %>
