--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,6 +17,19 @@
     <%= f.label :body %>
     <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
   <% end %>
+  
+  <% if post.image?%>
+  <div class="form-group">
+    <%= image_tag( post.image.post_thumbnail ) %>
+  </div> 
+  <% end %>
+  
+  <%= form_group_tag(post.errors[:image]) do %>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+    <%= f.hidden_field :image_cache, rows: 8, class: 'form-control', placeholder: "Upload image" %>
+  <% end %>
+
   <div class="form-group">
     <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
