--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,9 +12,10 @@
         <div class="media-body">
           <h4 class="media-heading">
             <%= link_to (post.markdown_title), [@topic, post] %>
+            <%= link_to image_tag(post.image.post_thumbnail.url), [@topic, post] if post.image %>
           </h4>
           <small>
-            <%= image_tag(post.user.avatar.tiny.url) if post.user avatar? %>
+            <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
             submitted <%= time_ago_in_words(post.created_at) %> ago by
             <%= post.user.name %><br>
             <%= post.comments.count %> Comments
