--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,3 +17,11 @@
   </div>
 </div>
 
+<div class="row">
+  <h2>Comments</h2>
+  <div class='col-md-12'>
+    <%= render @comments %>
+    <%= render 'comments/form', topic: @topic, comment: @comment, post: @post %>
+  </div>
+</div>
+
