--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,8 +20,10 @@
 <div class="row">
   <h2>Comments</h2>
   <div class='col-md-12'>
-    <%= render @comments %>
-    <%= render 'comments/form', topic: @topic, comment: @comment, post: @post %>
+    <% if policy(@comment).create? %>
+      <%= render @comments %>
+      <%= render partial: 'comments/form', locals: { topic: @topic, post: @post, comment: @comment } %>
+    <% end %>
   </div>
 </div>
 
