--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,9 @@
     <% if policy(@post).edit? %>
       <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+    <% if policy(@post).destroy? %>
+      <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?'} %>
+    <% end %>
   </div>
 </div>
 
@@ -22,8 +25,7 @@
   <div class='col-md-12'>
     <% if policy(@comment).create? %>
       <%= render @comments %>
-      <%= render partial: 'comments/form', locals: { topic: @topic, post: @post, comment: @comment } %>
+      <%= render 'comments/form', topic: @topic, comment: @comment, post: @post %>
     <% end %>
   </div>
 </div>
-
