Comments can be created and destroyed

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,4 @@
 <h1>About BloccitSaur</h1>
-<p>Created by: <%= my_name %></p>
+<p>Created by: Cecily Cruz</p>
 
 <%= link_to "Checkout my GitHub", "https://github.com/CecilySaurus", class: "social-btn" %>
