--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,7 +3,7 @@
       <small>
         <em><%= comment.user.name || comment.user.email && comment.user.avatar %></em>
         <% if policy(comment).destroy? %>
-          | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+          | <%#= link_to "Delete", [@topic, @post, comment], method: :delete %>
         <% end %>
       </small>
       <p><%= comment.body %></p>
